  * A preference to limit the amount of lines in the scrollback. Keeping this number lower reduces memory usage and speeds up Thud.
  * A new menu with 3 menu items to control the speed of updates that Thud sends. Keep it on Slow to reduce bandwidth usage, crank it to Fast when bad guys show up.
  
 Bug fixes:
 
  * Reduced memory usage of map data
  * Increased efficiency of parsing data from the MUX
  
1.0

 The focus of the final 1.0 release has been enhancements in speed and bug fixes. There are also a few minor new features.
 All users are encouraged to use this new release and upgrade from any older version.
 Note: Due to changes in the preferences file format, your preferences will be reset on starting this version. Sorry.
 
 New Features:
 
  * Better ANSI support: background colors and underline mode now supported
  * If you are in a tank, it will show a red line indicating turret facing
  * Other jumping mechs show a green line indicating jump heading
  * Hex numbers along side and top now have a black bar behind them to make them much easier to read
  * Hex numbers display at any zoom level - they skip numbers at far out zoom to make them readable
  * New option to display your heat level in the tactical display underneath your unit
  
 Bug Fixes:
 
  * Much much quicker connect-to-MUX time
  * Much quicker text handling
  * More efficient and usable map scrolling
  * Contact window listing is quicker and flickers less
  * Elevation numbers now show when 'Darken Elevations' is turned off
  * If the connection is dropped for some reason, Thud should now behave better. Choose your connection from the menu to reconnect
  * Menu items properly disabled/enabled depending on connection status
  * Choosing a new connection while still connected should disconnect properly first, then reconnect
  * No more duplicate contacts on unknowns (seismic or BAP contacts)
  * More misc. bug fixes than you can shake a stick at

1.0b5
